created the item model file in the model folder

--- a/grocery_ui/pubspec.yaml
+++ b/grocery_ui/pubspec.yaml
@@ -63,6 +63,9 @@ flutter:
     - assets/food.png
     - assets/foodie.png
     - assets/face.jpg
+    - assets/Avocado.webp
+    - assets/burger.jpeg
+    - assets/FruitSalad.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
